# ChangeLog for app-admin/eselect-rails
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-rails/ChangeLog,v 1.1 2007/09/01 05:08:49 nichoj Exp $

*eselect-rails-0.10 (01 Sep 2007)

  01 Sep 2007; Joshua Nichols <nichoj@gentoo.org> +metadata.xml,
  +eselect-rails-0.10.ebuild:
  Initial version, to support rails 1.1.6-r2 and 1.2.3-r1.
