@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/eselect-rails
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-rails/ChangeLog,v 1.1 2007/09/01 05:08:49 nichoj Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-rails/ChangeLog,v 1.2 2007/09/03 21:14:46 nichoj Exp $
+
+  03 Sep 2007; Joshua Nichols <nichoj@gentoo.org> eselect-rails-0.10.ebuild:
+  Removed blockers against rails.
 
 *eselect-rails-0.10 (01 Sep 2007)
 
